<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:gravity="center_horizontal"
		android:textColor="#9cc9c6" android:textStyle="bold" android:textSize="25sp"
		android:layout_margin="5dp" android:text="@string/registration" android:id="@+id/titleTextView"/>
	<TextView android:id="@+id/phoneNumberTextView"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:gravity="center_horizontal" android:textSize="20sp"
		android:layout_marginBottom="5dp" android:layout_marginLeft="5dp"
		android:layout_marginRight="5dp" android:layout_marginTop="5dp"
		android:text="@string/phonenumber"></TextView>
	<EditText android:layout_height="wrap_content" android:id="@+id/phoneNumberEditText"
		android:layout_width="match_parent" android:layout_marginBottom="5dp"
		android:layout_marginLeft="5dp" android:layout_marginRight="5dp"
		android:layout_marginTop="5dp"></EditText>
	<TextView android:id="@+id/passwordTextView"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:gravity="center_horizontal" android:textSize="20sp"
		android:layout_marginBottom="5dp" android:layout_marginLeft="5dp"
		android:layout_marginRight="5dp" android:layout_marginTop="5dp"
		android:text="@string/enterpassword"></TextView>
	<EditText android:layout_height="wrap_content" android:id="@+id/passwordEditText"
		android:layout_width="match_parent" android:layout_marginBottom="5dp"
		android:layout_marginLeft="5dp" android:layout_marginRight="5dp"
		android:layout_marginTop="5dp"></EditText>
	<TextView android:id="@+id/rePasswordTextView"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:gravity="center_horizontal" android:textSize="20sp"
		android:layout_marginBottom="5dp" android:layout_marginLeft="5dp"
		android:layout_marginRight="5dp" android:layout_marginTop="5dp"
		android:text="@string/reenterpassword"></TextView>
	<EditText android:layout_height="wrap_content" android:id="@+id/rePasswordEditText"
		android:layout_width="match_parent" android:layout_marginBottom="5dp"
		android:layout_marginLeft="5dp" android:layout_marginRight="5dp"
		android:layout_marginTop="5dp"></EditText>
	<Button android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:id="@+id/registerButton"
		android:layout_marginTop="5dp" android:layout_marginRight="5dp"
		android:layout_marginLeft="5dp" android:layout_marginBottom="5dp"
		android:text="@string/register"></Button>
	<FrameLayout android:id="@+id/frameLayout1"
		android:layout_width="match_parent" android:layout_height="fill_parent">
		<ProgressBar android:layout_height="wrap_content"
			style="@android:style/Widget.ProgressBar.Large" android:layout_width="wrap_content"
			android:layout_gravity="center" android:layout_margin="5dp"
			android:id="@+id/registerProgress"></ProgressBar>
		<TextView android:layout_width="wrap_content" android:textSize="20sp" android:text="@string/registeringdot" android:id="@+id/registeringTextView" android:layout_gravity="center_horizontal" android:layout_margin="5dp" android:layout_height="wrap_content"></TextView>
	</FrameLayout>

</LinearLayout>
